#4553 Fix word boundary matching