@@ -16,8 +16,6 @@ import stroom.security.impl.StroomOpenIdConfig;
 import stroom.test.common.util.test.AbstractMultiNodeResourceTest;
 import stroom.ui.config.shared.ExtendedUiConfig;
 import stroom.ui.config.shared.UiConfig;
-import stroom.util.filter.FilterFieldMapper;
-import stroom.util.filter.FilterFieldMappers;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.shared.PropertyPath;
@@ -33,8 +31,8 @@ import org.mockito.quality.Strictness;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
@@ -314,28 +312,25 @@ class TestGlobalConfigResourceImpl extends AbstractMultiNodeResourceTest<GlobalC
         final GlobalConfigService globalConfigService = createNamedMock(GlobalConfigService.class, node);
         final StroomEventLoggingService stroomEventLoggingService = new MockStroomEventLoggingService();
 
-        final FilterFieldMappers<ConfigProperty> fieldMappers = FilterFieldMappers.of(
-                FilterFieldMapper.of(GlobalConfigResource.FIELD_DEF_NAME, ConfigProperty::getNameAsString)
-        );
-
         when(globalConfigService.list(Mockito.any(GlobalConfigCriteria.class)))
                 .thenAnswer(invocation -> {
                     System.out.println("list called");
                     try {
                         GlobalConfigCriteria criteria = invocation.getArgument(0);
                         final ExpressionPredicateFactory expressionPredicateFactory = new ExpressionPredicateFactory();
-                        final Predicate<ConfigProperty> predicate =
-                                expressionPredicateFactory.create(
-                                        criteria.getQuickFilterInput(),
-                                        ConfigProperty::getNameAsString);
-                        final ListConfigResponse response = new ListConfigResponse(
-                                FULL_PROP_LIST
-                                        .stream()
-                                        .filter(predicate)
-                                        .peek(configProperty -> configProperty.setYamlOverrideValue(node.getNodeName()))
-                                        .collect(Collectors.toList()),
-                                "node1a");
-                        return response;
+
+                        Stream<ConfigProperty> stream = FULL_PROP_LIST.stream();
+                        stream = expressionPredicateFactory.filterAndSortStream(
+                                stream,
+                                criteria.getQuickFilterInput(),
+                                GlobalConfigService.FIELD_PROVIDER,
+                                GlobalConfigService.VALUE_FUNCTION_FACTORIES,
+                                Optional.empty());
+                        final List<ConfigProperty> list = stream
+                                .peek(configProperty -> configProperty.setYamlOverrideValue(node.getNodeName()))
+                                .toList();
+
+                        return new ListConfigResponse(list, "node1a");
                     } catch (Exception e) {
                         e.printStackTrace(System.err);
                         throw e;
